# gogo

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  flake.nix  shell.nix
api/: Cargo.toml  Dockerfile  Rocket.toml
api/migrations/2021-12-17-191255_create_shortlinks/: down.sql  up.sql
api/src/: errors.rs  main.rs  models.rs  schema.rs  views.rs
app/: .eslintrc.json  .postcssrc.json  .prettierignore  .proxyrc.json  Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.cjs
app/nginx/: default.conf
app/src/: App.tsx  api.ts  app.css  assert.ts  index.html  models.ts
app/src/components/: Button.tsx  Editable.tsx  GolinkEntry.tsx  Icons.tsx  Navbar.tsx
gogo-app/: index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
gogo-app/src/: api.ts  app.ts  styles.css
gogo-app/src/components/: editable.ts  icons.ts  link.ts  loader.ts  navbar.ts
gogo-app/types/: my-element.d.ts
src/: error.rs  errors.rs  main.rs  models.rs  schema.rs
