[package]
name = "gogo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
rocket_sync_db_pools = { version = "0.1.0-rc.1", default-features = false, features = [
    "diesel_postgres_pool",
] }
rocket_contrib = "0.4"
diesel = { version = "1.4.0", features = ["postgres"] }
dotenv = "0.15.0"
