[package]
name = "gogo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_postgres_pool"] }
rocket_contrib = "0.4"
diesel = { version = "1.4.0", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
serde = "1.0.132"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
